Avoid facebook widget making the page too wide

--- a/sass/custom/_paulus.scss
+++ b/sass/custom/_paulus.scss
@@ -468,3 +468,8 @@ twitterwidget {
 .text-center {
   text-align: center;
 }
+
+.aside-module {
+  max-width: 100%;
+  overflow: hidden;
+}
